Fix: Correct transfer.rs owner field and update repository URLs
- Fixed transfer.rs: Change 'sender' to 'owner' in has_one constraint
- Updated both Cargo.toml files with correct GitHub repository
- Updated .gitignore to exclude node_modules and build artifacts

Fixes compilation errors in privacy protocol.

--- a/psol/programs/psol/Cargo.toml
+++ b/psol/programs/psol/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "psol"
 version = "0.1.0"
-description = "Privacy SOL - Confidential transactions for Solana"
+description = "pSOL Privacy Protocol - Confidential transactions for Solana"
 edition = "2021"
 license = "MIT"
-repository = "https://github.com/swarp-protocol/psol"
+repository = "https://github.com/grkhmz23/pSol"
 
 [lib]
 crate-type = ["cdylib", "lib"]
