--- a/programs/psol-token/Cargo.toml
+++ b/programs/psol-token/Cargo.toml
@@ -1,25 +1,23 @@
 [package]
 name = "psol-token"
 version = "0.1.0"
-description = "pSOL Token - Privacy token for Solana"
+description = "pSOL Token - Privacy token for Solana with encrypted balances"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/grkhmz23/pSol"
 
 [lib]
 crate-type = ["cdylib", "lib"]
 name = "psol_token"
 
 [features]
+default = []
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
-default = []
 
 [dependencies]
 anchor-lang = "0.30.1"
 anchor-spl = "0.30.1"
 solana-program = "1.18.0"
-
-[dev-dependencies]
-solana-program-test = "1.18.0"
-solana-sdk = "1.18.0"
