--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
 [workspace]
-members = ["programs/*"]
+members = [
+    "programs/psol",
+    "programs/psol-token",
+]
 resolver = "2"
 
 [profile.release]
