Apply Claude fixes + fill psol-token instructions + unify toolchain

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
-
--0
-
 [workspace]
 members = [
   "programs/psol",
   "programs/psol-token",
 ]
+
 resolver = "2"
+
+[profile.release]
+overflow-checks = true
