--- a/programs/psol/Cargo.toml
+++ b/programs/psol/Cargo.toml
@@ -18,5 +18,6 @@ no-log-ix-name = []
 cpi = ["no-entrypoint"]
 
 [dependencies]
-anchor-lang = "0.32.1"
-anchor-spl = "0.32.1"
+anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
+anchor-spl  = "0.30.1"
+sha2        = "0.10"
